# CPP-WebServer

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  conanfile.txt  config.json  run.sh
docs/: api.md
modules/: CMakeLists.txt
modules/connection_wrapper/sources/: ConnectionHttp.cpp  ConnectionHttp.hpp  ConnectionSSL.cpp  ConnectionSSL.hpp  ConnectionWrapper.cpp  ConnectionWrapper.hpp  Main.cpp
modules/delete_request_handler/conf/: config.json
modules/delete_request_handler/sources/: DeleteRequestHandler.cpp  DeleteRequestHandler.hpp  Main.cpp
modules/file_explorer/conf/: config.json
modules/file_explorer/sources/: FileExplorer.cpp  FileExplorer.hpp  Main.cpp
modules/handler/sources/: Main.cpp
modules/handler_wrapper/: HandlerWrapper.cpp  HandlerWrapper.hpp
modules/head_request_handler/conf/: config.json
modules/head_request_handler/sources/: HeadRequestHandler.cpp  HeadRequestHandler.hpp  Main.cpp
modules/html_handler/conf/: config.json
modules/html_handler/sources/: HtmlHandler.cpp  HtmlHandler.hpp  Main.cpp
modules/logger/conf/: config.json
modules/logger/sources/: Main.cpp
modules/parser/sources/: Instance.cpp  Instance.hpp  Main.cpp  Parser.cpp  Parser.hpp
modules/php_cgi/conf/: config.json
modules/php_cgi/sources/: Main.cpp  PhpCgi.cpp  PhpCgi.hpp
modules/png_handler/conf/: config.json
modules/png_handler/sources/: Main.cpp  PngHandler.cpp  PngHandler.hpp
modules/post_request_handler/conf/: config.json
modules/post_request_handler/sources/: Main.cpp  PostRequestHandler.cpp  PostRequestHandler.hpp
resources/pages/: .htaccess  index.php  template.html  test.html
resources/pages/test_directory/: aa.html  bb.html
resources/pages/test_directory/omg_js/: style.css
sources/: Main.cpp  Zia.hpp
sources/abstraction/: access.hpp
sources/api/config/: Conf.cpp  Conf.hpp  IConf.hpp  IJson.hpp  Json.cpp  Json.hpp
sources/api/context/: Context.cpp  Context.hpp  IContext.hpp  IRequest.hpp  IResponse.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
sources/api/io/: Connection.cpp  Connection.hpp  IConnection.hpp  IInput.hpp  IInputOutput.hpp  IOutput.hpp
sources/api/modules/: IConnectionWrapper.hpp  IHandler.hpp  ILogger.hpp  IParser.hpp  Logger.cpp  Logger.hpp
sources/client/: Client.cpp  Client.hpp
sources/core/: Core.cpp  Core.hpp
sources/exception/: AException.cpp  AException.hpp  IException.hpp
sources/fileWatcher/: FileWatcher.cpp  FileWatcher.hpp
sources/loader/: ManagerSharedObject.cpp  ManagerSharedObject.hpp
sources/pipeline/: PipelineHandlers.cpp  PipelineHandlers.hpp
sources/server/: ServerNetwork.cpp  ServerNetwork.hpp
sources/tools/: HandleResponse.cpp  HandleResponse.hpp
tests/: Main.cpp  client.sh  exampleOtherRequest.txt  request.txt
